Manager as worker fully functional